--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@ loginForm.addEventListener('submit', function(event) {
 
     // Здесь вы можете добавить свою логику проверки пользователя
     // Например, сравнить введенные данные с заранее заданными
-    if (username === 'admin' && password === '12345') {
+    if (username === 'Winnigames2024' && password === 'kodiki8909') {
+        window.location.assign('https://link-short.github.io/login/panel');
         alert('Вход выполнен успешно!');
         // Здесь можно перенаправить пользователя на другую страницу или выполнить другие действия
     } else {
-        alert('Неправильное имя пользователя или пароль.');
+        document.getElementById('password').value = '';
     }
 });
 
