--- a/index.html
+++ b/index.html
@@ -18,27 +18,6 @@
         <button type="submit">Войти</button>
     </form>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
-<script>
-    const loginForm = document.getElementById('loginForm');
-
-loginForm.addEventListener('sumbit', function(event) {
-    event.preventDefault(); // Предотвращает стандартную отправку формы
-    
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
-
-    // Здесь вы можете добавить свою логику проверки пользователя
-    // Например, сравнить введенные данные с заранее заданными
-    if (username === 'Winnigames2024' && password === 'kodiki8909') {
-        window.location.assign('https://link-short.github.io/login/panel');
-        alert('Вход выполнен успешно!');
-        // Здесь можно перенаправить пользователя на другую страницу или выполнить другие действия
-    } else {
-        document.getElementById('password').value = '';
-    }
-});
-
-</script>
 </html>
