--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+  #errorFrame {
+  visibility: visible;
+  }
+</style>
+    
 <head>
     <title>Вход в аккаунт</title>
 </head>
@@ -17,7 +24,9 @@
 
         <button type="submit">Войти</button>
     </form>
-
+    <h type="button">
+        <h4 id="errorFrame">Error</h4>
+    </h>
     <script src="index.js"></script>
 </body>
 </html>
